docs/pages/versions/v57.0.0/sdk/ui/drop-in-replacements/maskedview.mdx
---
title: MaskedView
description: A masked view compatible with @react-native-masked-view/masked-view.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { PlatformSpotlight, PlatformTabsGroup } from '~/ui/components/PlatformTabs';

A `MaskedView` component with an API compatible with `@react-native-masked-view/masked-view`. The opaque pixels of `maskElement` reveal the masked content behind it; transparent pixels hide it.

Under the hood this component bridges arbitrary React Native children into the platform-specific `@expo/ui` masking primitives:

- **Android**: Jetpack Compose graphics layer compositing with `BlendMode.DstIn`.
- **iOS**: SwiftUI [`.mask`](<https://developer.apple.com/documentation/swiftui/view/mask(alignment:_:)>) modifier.

<PlatformTabsGroup>

<PlatformSpotlight
  android={{
    src: '/static/images/expo-ui/community-maskedview/android-light.webp',
    darkSrc: '/static/images/expo-ui/community-maskedview/android-dark.webp',
    alt: 'The word EXPO filled with a rainbow gradient',
  }}
  ios={{
    src: '/static/images/expo-ui/community-maskedview/ios-light.webp',
    darkSrc: '/static/images/expo-ui/community-maskedview/ios-dark.webp',
    alt: 'The word EXPO filled with a rainbow gradient',
  }}
/>

## Installation

<APIInstallSection />

## Migrating from `@react-native-masked-view/masked-view`

- Update the import from `import MaskedView from '@react-native-masked-view/masked-view'` to `import { MaskedView } from '@expo/ui/community/masked-view'`.
- The `androidRenderingMode` prop is not supported. The Compose-based implementation always uses an offscreen graphics layer, so the prop has no equivalent and is omitted from the public types.
- Web is not implemented. On web, children render unmasked and a one-time console warning is logged. For web targets, prefer the CSS primitive that fits your specific case:
  - **Gradient text** — `background-clip: text` with `color: 'transparent'` and a CSS gradient/image as the background.
  - **Alpha fade** — `mask-image: linear-gradient(...)` (or `WebkitMaskImage`) directly on the content view.
  - **Shape mask** (circle, rounded rectangle, and so on) — `clip-path: circle(...)` / `inset(...)` / `path(...)`, or `border-radius` + `overflow: 'hidden'`.

## Basic usage

<ComponentExample
  title="MaskedViewExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-maskedview-basic-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-maskedview-basic-android-dark.webp',
    alt: 'The word EXPO filled with a rainbow gradient',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-maskedview-basic-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-maskedview-basic-ios-dark.webp',
    alt: 'The word EXPO filled with a rainbow gradient',
  }}>

```tsx
import { MaskedView } from '@expo/ui/community/masked-view';
import { StyleSheet, Text, View } from 'react-native';

export default function MaskedViewExample() {
  return (
    <MaskedView
      style={{ width: 300, height: 80 }}
      maskElement={
        <View style={{ flex: 1, alignItems: 'center', justifyContent: 'center' }}>
          <Text style={{ fontSize: 64, fontWeight: 'bold' }}>EXPO</Text>
        </View>
      }>
      <View
        style={[
          StyleSheet.absoluteFill,
          {
            experimental_backgroundImage:
              'linear-gradient(135deg, #FF3B30, #FF9500, #FFCC00, #34C759, #007AFF, #AF52DE)',
          },
        ]}
      />
    </MaskedView>
  );
}
```

</ComponentExample>

## Alpha-fade mask

Only the alpha channel of the `maskElement` matters: opaque pixels reveal content, transparent pixels hide it. Use a `LinearGradient` (from `expo-linear-gradient`) that goes from opaque to transparent — `'black'` (for example) to `'transparent'` below — to fade content out along an axis.

<ComponentExample
  title="AlphaFadeExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-maskedview-alpha-fade-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-maskedview-alpha-fade-android-dark.webp',
    alt: 'Three color bands fading out from left to right',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-maskedview-alpha-fade-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-maskedview-alpha-fade-ios-dark.webp',
    alt: 'Three color bands fading out from left to right',
  }}>

```tsx
import { MaskedView } from '@expo/ui/community/masked-view';
import { LinearGradient } from 'expo-linear-gradient';
import { StyleSheet, View } from 'react-native';

export default function AlphaFadeExample() {
  return (
    <MaskedView
      style={{ width: 300, height: 80, flexDirection: 'row' }}
      maskElement={
        <LinearGradient
          colors={['black', 'transparent']}
          start={{ x: 0, y: 0 }}
          end={{ x: 1, y: 0 }}
          style={StyleSheet.absoluteFill}
        />
      }>
      <View style={{ flex: 1, backgroundColor: '#3D5A80' }} />
      <View style={{ flex: 1, backgroundColor: '#DAA520' }} />
      <View style={{ flex: 1, backgroundColor: '#E07A5F' }} />
    </MaskedView>
  );
}
```

</ComponentExample>

## API

```tsx
import { MaskedView } from '@expo/ui/community/masked-view';
```

<APISection packageName="expo-ui/community/masked-view" apiName="MaskedView" />

</PlatformTabsGroup>
